bpo-42431: Fix outdated bytes comments

Also move definitions of internal macros F_LJUST etc to private header.